fix scroll offscreen sidemenu

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -24,6 +24,10 @@
   text-align: right;
 }
 
+.menu {
+  display: none;
+}
+
 @media (max-width: 740px) {
   .menu {
     margin: 0;
@@ -72,18 +76,17 @@
   }
 
   .menuLinks {
-    position: absolute;
-    width: 300px;
-    height: 78.3%;
-    margin: -60px 0 0 -230px;
-    padding: 50px;
+    position: fixed;
+    top: -16px;
+    right: 0;
+    width: 250px;
+    height: 100%;
     padding-top: 90px;
     background: #EAEAEA;
     list-style-type: none;
     border-radius: 1px;
     -webkit-font-smoothing: antialiased;
-    transform-origin: 0% 0%;
-    transform: translate(73%, 0);
+    transform: translateX(100%);
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
   }
 
